fixed layout issues, added page generation on clicking project title

--- a/src/components/projectcard/ProjectCard.css
+++ b/src/components/projectcard/ProjectCard.css
@@ -14,6 +14,7 @@
   text-align: center;
   background: white;
   justify-content: center;
+  background-color: #457B9D;
 }
 .card > .img-container > img {
   width: 100%; 
