--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -8,11 +8,12 @@ img {
     font-style: italic;
     font-size: 20px;
     padding-top: 6vh;
-    padding-bottom: 21vh;
+    padding-bottom: 25vh;
 }
 @media only screen and (max-width: 767px) {
     .tagLine {
         padding: 25px;
         font-size: 20px;
+        padding-bottom: 2vh;
     }
 }
